# CE2OCF

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yaml
CE2OCF/: __init__.py
CE2OCF/ce/: __init__.py  parser.py
CE2OCF/ce/mocks/: __init__.py  objects.py
CE2OCF/ce/transforms/: json.py  xml.py
CE2OCF/datamap/: __init__.py  crawler.py  definitions.py  loaders.py  parsers.py
CE2OCF/datamap/defaults/: ce_to_ocf_common_stock_issuance_only.json  ce_to_ocf_datamap_common_stock_legend_only.json  ce_to_ocf_datamap_preferred_stock_legend_only.json  ce_to_ocf_issuer_only.json  ce_to_ocf_preferred_stock_class_only.json  ce_to_ocf_preferred_stock_issuance_only.json  ce_to_ocf_stockholders_only.json  ce_to_ocf_vesting_enums_events_only.json  cic_event_definition.json  double_trigger_acceleration.json  single_trigger_acceleration.json
CE2OCF/ocf/: __init__.py  datamaps.py  pipeline.py  postprocessors.py  validator.py
CE2OCF/ocf/generators/: ocf_id_generators.py  ocf_vesting_conditions.py  ocf_vesting_events.py  vesting_enums_to_ocf.py
CE2OCF/ocf/mocks/: company.py  officers.py  stockholders.py
CE2OCF/types/: dictionaries.py  enums.py  exceptions.py  models.py  protocols.py
CE2OCF/utils/: hash_utils.py  log_utils.py  model_utils.py  string_templating_utils.py
docs/: configuring datamap lookups.md  datamaps.md  dev environment.md  project structure.md  quickstart.md
docs/Contract Express to API Concepts/: API Outputs.md  Repeats.md  Variable Value Extraction.md
docs/images/: Ce2Ocf.xcf
tests/: __init__.py  test_all_scenarios.py  test_config_loaders.py  test_ocf_datamaps.py  test_template_language.py  test_validator.py
tests/fixtures/: ce_datasheet_five_stockholders.json  ce_datasheet_items_five_stockholders_full_answers.json  ce_datasheet_items_with_founder_preferred.json  ce_datasheet_no_repetition.json  ce_datasheet_no_stockholders.json
tests/fixtures/datamap_samples/: ce_to_ocf_common_stock_class_only.json  ce_to_ocf_common_stock_issuance_only.json  ce_to_ocf_issuer_only.json  ce_to_ocf_preferred_stock_issuance_only.json  ce_to_ocf_stock_plan_only.json  ce_to_ocf_stockholders_only.json  ce_to_ocf_vesting_enums_events_only.json
tests/fixtures/ocf_vesting_schedules/: FOUR_YR_1_YR_CLIFF.ONE_HUNDRED_PERCENT_ALL_TIMES.json  FOUR_YR_1_YR_CLIFF.ONE_HUNDRED_PERCENT_INVOLUNTARY_TERMINATION.json  FOUR_YR_1_YR_CLIFF.SIX_MONTHS_ALL_TIMES.json  FOUR_YR_1_YR_CLIFF.SIX_MONTHS_INVOLUNTARY_TERMINATION.json  FOUR_YR_1_YR_CLIFF.TWENTY_FOUR_MONTHS_ALL_TIMES.json  FOUR_YR_NO_CLIFF.SIX_MONTHS_ALL_TIMES.json  FOUR_YR_NO_CLIFF.SIX_MONTHS_INVOLUNTARY_TERMINATION.json  FOUR_YR_NO_CLIFF.TWELVE_MONTHS_ALL_TIMES.json  FOUR_YR_NO_CLIFF.TWELVE_MONTHS_INVOLUNTARY_TERMINATION.json  FOUR_YR_NO_CLIFF.TWENTY_FOUR_MONTHS_INVOLUNTARY_TERMINATION.json
tests/fixtures/sample_ce_jsons/: fully_vested_repeated.json
tests/fixtures/sample_ce_xmls/: sample_output.xml
